force-app/main/default/objects/Fee_Creation__c/Fee_Creation__c.object-meta.xml
<CustomObject>
    <label>Fee Creation</label>
    <nameField>
        <displayFormat>FC-{000000}</displayFormat>
        <label>Fee Creation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fee Creations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>