force-app/main/default/objects/Fee_Creation__c/fields/Applicable_on_Loan_Amount_Asset_Value__c.field-meta.xml
<CustomField>
    <fullName>Applicable_on_Loan_Amount_Asset_Value__c</fullName>
    <label>Applicable on</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Loan Amount</fullName>
            </value>
            <value>
                <fullName>Asset Value</fullName>
            </value>
            <value>
                <fullName>EMI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>