force-app/main/default/objects/Fee_Creation__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Fee Creations</relationshipLabel>
    <relationshipName>Fee_Creations</relationshipName>
    <type>Lookup</type>
</CustomField>