force-app/main/default/objects/Fee_Creation__c/fields/External_Agency_Master__c.field-meta.xml
<CustomField>
    <fullName>External_Agency_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency Name</label>
    <referenceTo>External_Agency_Master__c</referenceTo>
    <relationshipLabel>Fee Creations</relationshipLabel>
    <relationshipName>Fee_Creations</relationshipName>
    <type>Lookup</type>
</CustomField>