force-app/main/default/objects/Fee_Creation__c/fields/Fee_Code__c.field-meta.xml
<CustomField>
    <fullName>Fee_Code__c</fullName>
    <label>Fee Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PRC_FEE_Type</fullName>
            </value>
            <value>
                <fullName>Cersai</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>LegaL</fullName>
            </value>
            <value>
                <fullName>IMD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>