force-app/main/default/objects/Fee_Creation__c/fields/Fee_Collected__c.field-meta.xml
<CustomField>
    <fullName>Fee_Collected__c</fullName>
    <formula>AND(NOT((ISBLANK(Fee_Collection__c) ) ),Fee_Collection__c != 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fee Collected</label>
    <type>Checkbox</type>
</CustomField>