force-app/main/default/objects/Fee_Creation__c/fields/Fee_Collection__c.field-meta.xml
<CustomField>
    <fullName>Fee_Collection__c</fullName>
    <label>Fee Collection</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>