force-app/main/default/objects/Fee_Creation__c/fields/Fee_Type_Master__c.field-meta.xml
<CustomField>
    <fullName>Fee_Type_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fee Code Master</label>
    <referenceTo>Fee_Type_Master__c</referenceTo>
    <relationshipLabel>Fee Creations</relationshipLabel>
    <relationshipName>Fee_Creations</relationshipName>
    <type>Lookup</type>
</CustomField>