force-app/main/default/objects/Fee_Creation__c/fields/Loan_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Loan_Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Applicant</label>
    <referenceTo>Loan_Applicant__c</referenceTo>
    <relationshipLabel>Fee Creations</relationshipLabel>
    <relationshipName>Fee_Creations</relationshipName>
    <type>Lookup</type>
</CustomField>