force-app/main/default/objects/Fee_Creation__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Fee Creations</relationshipLabel>
    <relationshipName>Fee_Creations</relationshipName>
    <type>Lookup</type>
</CustomField>