force-app/main/default/objects/Fee_Creation__c/fields/Repayment_Type_2__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Type_2__c</fullName>
    <label>Repayment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Receipt</fullName>
            </value>
            <value>
                <fullName>Deduct from Disbursement</fullName>
            </value>
            <value>
                <fullName>Add to Loan Amount</fullName>
                <isActive>false</isActive>
                <label>Add to Loan Amount</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>