force-app/main/default/objects/Fee_Creation__c/fields/Stage_Due__c.field-meta.xml
<CustomField>
    <fullName>Stage_Due__c</fullName>
    <label>Stage Due,</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre Login</fullName>
            </value>
            <value>
                <fullName>Disbursement</fullName>
            </value>
            <value>
                <fullName>Pre Disbursement</fullName>
            </value>
            <value>
                <fullName>Post Disbursement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>