force-app/main/default/objects/Fee_Creation__c/fields/Sum_Assured__c.field-meta.xml
<CustomField>
    <fullName>Sum_Assured__c</fullName>
    <label>Sum Assured</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>